Changed project structure, added scrollbar on hover, styled scrollbar, removed fixed class from the header...

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,45 @@
 }
 
 
+/* Showing scroll only on hover of the content */
+.scroll {
+  overflow-y: scroll;
+  mask-image: linear-gradient(to top, transparent, black),
+    linear-gradient(to left, transparent 17px, black 17px);
+  mask-size: 100% 20000px;
+  mask-position: left bottom;
+  -webkit-mask-image: linear-gradient(to top, transparent, black),
+    linear-gradient(to left, transparent 17px, black 17px);
+  -webkit-mask-size: 100% 20000px;
+  -webkit-mask-position: left bottom;
+  transition: mask-position 0.3s, -webkit-mask-position 0.3s;
+}
+
+.scroll:hover {
+  -webkit-mask-position: left top;
+}
+
+/* Styling scroll */
+.scroll::-webkit-scrollbar-track, .sidebar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.scroll::-webkit-scrollbar, .sidebar::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.scroll::-webkit-scrollbar-thumb, .sidebar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #76A5AF;
+}
+
 /*Show More/Show less - cards*/
 .activity-showMore {
   display: none;
